# StreamLabs-Assignment

./: README.md
NamedPipeClient/: CMakeLists.txt
NamedPipeClient/NamedPipeClient/: CMakeLists.txt  NamedPipeClient.cpp  NamedPipeClient.h
NamedPipeServer/: CMakeLists.txt
NamedPipeServer/NamedPipeServer/: CMakeLists.txt  NamedPipeServer.cpp  NamedPipeServer.h
