# CMakeList.txt : CMake project for NamedPipeClient, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (NamedPipeClient "NamedPipeClient.cpp" "NamedPipeClient.h")

# TODO: Add tests and install targets if needed.
