# CMakeList.txt : CMake project for NamedPipeServer, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (NamedPipeServer "NamedPipeServer.cpp" "NamedPipeServer.h")

# TODO: Add tests and install targets if needed.
